# cci

./: .gitmodules  CMakeLists.txt
.github/workflows/: autotools.yml  cmake.yml
cmake/: run_test.cmake
examples/: CMakeLists.txt
examples/cci/ex02_Fully_Supported_Data_Type_Param/: ex02_simple_ip.h
examples/inspection/: test02-weak-link.cpp
examples/inspection/test01-basic/: CMakeLists.txt  test01-basic.cpp
examples/inspection/test02-custom-discover/: CMakeLists.txt  test02-custom-discover.cpp  test02-custom-discover.h
examples/inspection/test02-custom-discover-if/: CMakeLists.txt  discover-if.cpp  test02-custom-discover-if.cpp
src/: CMakeLists.txt  cci_inspection
src/cci/: Makefile.am
src/cci/core/: cci_cmnhdr.h
src/cci/inspection/: cci_inspection.cpp  files.am
