add_executable(test01-basic EXCLUDE_FROM_ALL test01-basic.cpp)
if(MSVC)
    target_link_libraries(test01-basic PRIVATE Catch2::Catch2WithMain -WHOLEARCHIVE:$<TARGET_FILE:cci> cci)
elseif(APPLE)
    target_link_libraries(test01-basic PRIVATE Catch2::Catch2WithMain -Wl,-force_load cci)
else()
    target_link_libraries(test01-basic PRIVATE Catch2::Catch2WithMain -Wl,--whole-archive cci -Wl,--no-whole-archive)
endif()
add_test(NAME "inspection/test01-basic" COMMAND test01-basic)
add_dependencies(check test01-basic)
