add_library(custom-discover-if-static STATIC EXCLUDE_FROM_ALL discover-if.cpp)
get_target_property(CCI_INCLUDE_DIR cci INCLUDE_DIRECTORIES)
target_include_directories(custom-discover-if-static PRIVATE ${CCI_INCLUDE_DIR})

add_executable(test02-custom-discover-if-static EXCLUDE_FROM_ALL test02-custom-discover-if.cpp)
target_link_libraries(test02-custom-discover-if-static PRIVATE Catch2::Catch2WithMain custom-discover-if-static cci)
#if(MSVC)
#    target_link_libraries(test02-custom-discover-if-static PRIVATE Catch2::Catch2WithMain -WHOLEARCHIVE:$<TARGET_FILE:custom-discover-if-static> custom-discover-if-static cci)
#elseif(APPLE)
#    target_link_libraries(test02-custom-discover-if-static PRIVATE Catch2::Catch2WithMain cci -Wl,-force_load custom-discover-if-static)
#else()
#    target_link_libraries(test02-custom-discover-if-static PRIVATE Catch2::Catch2WithMain cci -Wl,--whole-archive custom-discover-if-static -Wl,--no-whole-archive)
#endif()
add_test(NAME "inspection/test02-custom-discover-if/static" COMMAND test02-custom-discover-if-static)
add_dependencies(check test02-custom-discover-if-static)

if (NOT (WIN32 OR CYGWIN))
    add_library(custom-discover-if-shared EXCLUDE_FROM_ALL discover-if.cpp)
    get_target_property(CCI_INCLUDE_DIR cci INCLUDE_DIRECTORIES)
    target_include_directories(custom-discover-if-shared PRIVATE ${CCI_INCLUDE_DIR})

    add_executable(test02-custom-discover-if-shared EXCLUDE_FROM_ALL test02-custom-discover-if.cpp)
    target_link_libraries(test02-custom-discover-if-shared PRIVATE Catch2::Catch2WithMain custom-discover-if-shared cci)
    add_test(NAME "inspection/test02-custom-discover-if/shared" COMMAND test02-custom-discover-if-shared)
    add_dependencies(check test02-custom-discover-if-shared)
endif()
